[package]
name = "agitsu"
version = "0.1.0"
edition = "2024"
authors = ["Sai Sasidhar Maddali"]

[dependencies]
image = "0.25.6"
ndarray = "0.16.1"
show-image = "0.14.1"
glib = "0.21.3"
gstreamer = "0.23"
gstreamer-base = "0.24.2"
gstreamer-video = "0.24.2"

[lib]
name = "agitsu"
crate-type = ["cdylib"]
path = "src/lib.rs"